# research-code-principles

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  bootstrap.sh  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: TagBot.yml  ci.yml  docs.yml  publish-python.yml
agent_docs/: ARCHITECTURE.md  README.md  SCOPE_OF_WORK.md  sprint-1-foundation.md  sprint-2-package.md  sprint-3-scaffolding.md  sprint-4-provenance.md  sprint-5-cicd.md  sprint-6-docs.md
agent_prompts/: README.md  code-review.md  core-principles.md  error-handling.md  kernel-optimization.md  physics-validation.md  test-generation.md
agentbible/: __init__.py  __main__.py  errors.py  jupyter.py
agentbible/cli/: __init__.py  audit.py  ci.py  context_audit.py  generate.py  init.py  main.py  registry.py  report.py  retrofit.py  scaffold.py  validate.py
agentbible/context/: __init__.py  chunker.py  config.py  manager.py
agentbible/domains/: __init__.py
agentbible/domains/atmospheric/: __init__.py  checks.py  errors.py
agentbible/domains/ml/: __init__.py  checks.py  errors.py  validators.py
agentbible/domains/quantum/: __init__.py  errors.py  validators.py
agentbible/philosophy/: __init__.py  principles.py
agentbible/provenance/: __init__.py  hdf5.py  record.py
agentbible/templates/: __init__.py
agentbible/templates/cpp_hpc/: .cursorrules  AGENTS.md.template  CMakeLists.txt.template  README.md.template
agentbible/templates/cpp_hpc/include/: CudaMemory.hpp  core.hpp
agentbible/templates/cpp_hpc/src/: core.cpp  main.cpp
agentbible/templates/cpp_hpc/tests/: test_core.cpp  test_cuda_memory.cpp  test_main.cpp
agentbible/templates/python_ml/: .cursorrules  README.md.template  pyproject.toml.template
agentbible/templates/python_ml/src/: __init__.py  reproducibility.py  validation.py
agentbible/templates/python_ml/tests/: __init__.py  conftest.py  test_validation.py
agentbible/templates/python_quantum/: .cursorrules  README.md.template  pyproject.toml.template
agentbible/templates/python_quantum/src/: __init__.py  circuits.py  gates.py  validation.py
agentbible/templates/python_quantum/tests/: __init__.py  conftest.py  test_validation.py
agentbible/templates/python_research/: .cursorrules  AGENTS.md.template  README.md.template  pyproject.toml.template
agentbible/templates/python_research/src/: __init__.py  validation.py
agentbible/templates/python_research/tests/: __init__.py  test_validation.py
agentbible/templates/python_simulation/: .cursorrules  README.md.template  pyproject.toml.template
agentbible/templates/python_simulation/src/: __init__.py  io.py  validation.py
agentbible/templates/python_simulation/tests/: __init__.py  conftest.py  test_validation.py
agentbible/testing/: __init__.py  decorators.py  fixtures.py
agentbible/validators/: __init__.py  arrays.py  base.py  bounds.py  matrix.py  pipeline.py  probability.py  quantum.py
docs/: agent-coding-context.md  novelty-comparison.md  philosophy.md  prompting-research-code.md  repo-standards.md  research-code-principles.md  style-guide-reference.md
docs/site/: contributing.md  index.md
docs/site/api/: provenance.md  testing.md  validators.md
docs/site/getting-started/: installation.md  quickstart.md  templates.md
docs/site/guide/: cli.md  provenance.md  testing.md  validators.md
docs/site/philosophy/: principles.md  style-guide.md
examples/core-validators-example/: README.md  simulation.py
examples/hpc-vqe-benchmark/: README.md  vqe_benchmark.py
examples/ml-classifier-with-agentbible/: README.md  main.py  test_reproducibility.py  validate_model.py
examples/quantum-gate-example/: README.md  gate.py  prompting-log.md  test_gate.py
languages/cpp/: CMakeLists.txt  README.md
languages/cpp/include/agentbible/: agentbible.hpp  provenance.hpp  validators.hpp
languages/cpp/tests/: CMakeLists.txt  test_conformance.cpp  test_provenance.cpp  test_validators.cpp
languages/julia/: Manifest.toml  Project.toml  README.md
languages/julia/src/: AgentBible.jl  errors.jl  provenance.jl  validators.jl
languages/julia/test/: runtests.jl  test_conformance.jl  test_provenance.jl  test_validators.jl
languages/rust/: Cargo.toml  README.md
languages/rust/agentbible/: Cargo.toml  build.rs
languages/rust/agentbible/src/: lib.rs
languages/rust/agentbible/src/check/: macros.rs  mod.rs
languages/rust/agentbible/src/provenance/: mod.rs  record.rs
languages/rust/agentbible/src/types/: finite_float.rs  mod.rs  positive_definite.rs  positive_float.rs  probability.rs  unitary_matrix.rs
languages/rust/agentbible/tests/: test_check.rs  test_conformance.rs  test_provenance.rs  test_types.rs
opencode-context/: README.md  config.example.yaml  requirements.txt
opencode-context/oc_lib/: __init__.py  config.py  embed.py  retrieve.py
schema/: provenance_v1.json
scripts/: map_repo.sh
templates/cpp_hpc/: CMakeLists.txt  README.md
templates/cpp_hpc/include/: CudaMemory.hpp  core.hpp
templates/cpp_hpc/src/: core.cpp  main.cpp
templates/cpp_hpc/tests/: test_core.cpp  test_cuda_memory.cpp  test_main.cpp
templates/python_research/: README.md  pyproject.toml
templates/python_research/src/: __init__.py  validation.py
templates/python_research/tests/: conftest.py
tests/: __init__.py  conftest.py  test_audit.py  test_audit_context.py  test_ci.py  test_cli.py  test_context.py  test_generate.py  test_init.py  test_provenance.py  test_report.py  test_testing.py  test_validate.py  test_validation_levels.py  test_validators_arrays.py  test_validators_atmospheric.py  test_validators_bounds.py  test_validators_matrix.py  test_validators_ml.py  test_validators_pipeline.py  test_validators_probability.py  test_validators_quantum.py
