[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbible"
version = "0.3.0"
description = "One-shot correct infrastructure for AI agents working on scientific code"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Rylan Malarchick", email = "rylan1012@gmail.com" }
]
maintainers = [
    { name = "Rylan Malarchick", email = "rylan1012@gmail.com" }
]
keywords = [
    "research",
    "scientific-computing",
    "validation",
    "quantum",
    "physics",
    "ai-coding",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
# Domain plugins (no extra deps required, establishes the pattern)
quantum = []  # Quantum computing validators (unitarity, hermiticity, density matrices)
# Future domains:
# chemistry = ["ase", "rdkit"]
# fluids = ["scipy"]

# Feature extras
hdf5 = [
    "h5py>=3.0",
]
context = [
    "chromadb>=0.4",
    "openai>=1.0",
    "tiktoken>=0.5",
]
# Legacy alias for context
vector = [
    "chromadb>=0.4",
    "openai>=1.0",
    "tiktoken>=0.5",
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "pre-commit>=3.0",
]

# All extras
all = [
    "agentbible[quantum,hdf5,vector,dev]",
]

[project.scripts]
bible = "agentbible.cli.main:cli"

[project.urls]
Homepage = "https://github.com/rylanmalarchick/research-code-principles"
Documentation = "https://github.com/rylanmalarchick/research-code-principles#readme"
Repository = "https://github.com/rylanmalarchick/research-code-principles.git"
Issues = "https://github.com/rylanmalarchick/research-code-principles/issues"
Changelog = "https://github.com/rylanmalarchick/research-code-principles/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agentbible"]

[tool.hatch.build.targets.sdist]
include = [
    "agentbible/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF001", # allow ambiguous unicode in strings (Greek letters for physics)
    "RUF002", # allow ambiguous unicode in docstrings
    "RUF003", # allow ambiguous unicode in comments
    "RUF022", # don't require sorted __all__ (we group by category)
    "ARG001", # allow unused function arguments (CLI stubs for future sprints)
]

[tool.ruff.lint.isort]
known-first-party = ["agentbible"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
disable_error_code = ["type-arg"]  # numpy.ndarray generic params vary by numpy version
exclude = [
    "^agentbible/templates/",  # Template files are not meant to be type-checked here
]

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "h5py.*",
    "chromadb.*",
    "torch.*",
    "_pytest.*",
    "pytest.*",
]
ignore_missing_imports = true
ignore_errors = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["agentbible"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
    # TODO: Add tests for these new v0.3.0 modules
    "agentbible/context/*",
    "agentbible/philosophy/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
# TODO: Raise back to 80% after adding tests for context/philosophy modules
fail_under = 75
show_missing = true
